// Copyright (c) 2021 Huawei Device Co., Ltd.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_package = "ohos.devtools.datasources.transport.grpc.service";
option optimize_for = LITE_RUNTIME;

// Common define for memory plug-in, imported by memory data and config proto file.
enum SysMeminfoType {
    PMEM_UNSPECIFIED = 0;
    PMEM_MEM_TOTAL = 1;
    PMEM_MEM_FREE = 2;
    PMEM_MEM_AVAILABLE = 3;
    PMEM_BUFFERS = 4;
    PMEM_CACHED = 5;
    PMEM_SWAP_CACHED = 6;
    PMEM_ACTIVE = 7;
    PMEM_INACTIVE = 8;
    PMEM_ACTIVE_ANON = 9;
    PMEM_INACTIVE_ANON = 10;
    PMEM_ACTIVE_FILE = 11;
    PMEM_INACTIVE_FILE = 12;
    PMEM_UNEVICTABLE = 13;
    PMEM_MLOCKED = 14;
    PMEM_SWAP_TOTAL = 15;
    PMEM_SWAP_FREE = 16;
    PMEM_DIRTY = 17;
    PMEM_WRITEBACK = 18;
    PMEM_ANON_PAGES = 19;
    PMEM_MAPPED = 20;
    PMEM_SHMEM = 21;
    PMEM_SLAB = 22;
    PMEM_SLAB_RECLAIMABLE = 23;
    PMEM_SLAB_UNRECLAIMABLE = 24;
    PMEM_KERNEL_STACK = 25;
    PMEM_PAGE_TABLES = 26;
    PMEM_COMMIT_LIMIT = 27;
    PMEM_COMMITED_AS = 28;
    PMEM_VMALLOC_TOTAL = 29;
    PMEM_VMALLOC_USED = 30;
    PMEM_VMALLOC_CHUNK = 31;
    PMEM_CMA_TOTAL = 32;
    PMEM_CMA_FREE = 33;
    PMEM_KERNEL_RECLAIMABLE = 34;
    PMEM_ACTIVE_PURG = 35;
    PMEM_INACTIVE_PURG = 36;
    PMEM_PINED_PURG = 37;
}

enum SysVMeminfoType {
    VMEMINFO_UNSPECIFIED = 0;
    VMEMINFO_NR_FREE_PAGES = 1;
    VMEMINFO_NR_ALLOC_BATCH = 2;
    VMEMINFO_NR_INACTIVE_ANON = 3;
    VMEMINFO_NR_ACTIVE_ANON = 4;
    VMEMINFO_NR_INACTIVE_FILE = 5;
    VMEMINFO_NR_ACTIVE_FILE = 6;
    VMEMINFO_NR_UNEVICTABLE = 7;
    VMEMINFO_NR_MLOCK = 8;
    VMEMINFO_NR_ANON_PAGES = 9;
    VMEMINFO_NR_MAPPED = 10;
    VMEMINFO_NR_FILE_PAGES = 11;
    VMEMINFO_NR_DIRTY = 12;
    VMEMINFO_NR_WRITEBACK = 13;
    VMEMINFO_NR_SLAB_RECLAIMABLE = 14;
    VMEMINFO_NR_SLAB_UNRECLAIMABLE = 15;
    VMEMINFO_NR_PAGE_TABLE_PAGES = 16;
    VMEMINFO_NR_KERNEL_STACK = 17;
    VMEMINFO_NR_OVERHEAD = 18;
    VMEMINFO_NR_UNSTABLE = 19;
    VMEMINFO_NR_BOUNCE = 20;
    VMEMINFO_NR_VMSCAN_WRITE = 21;
    VMEMINFO_NR_VMSCAN_IMMEDIATE_RECLAIM = 22;
    VMEMINFO_NR_WRITEBACK_TEMP = 23;
    VMEMINFO_NR_ISOLATED_ANON = 24;
    VMEMINFO_NR_ISOLATED_FILE = 25;
    VMEMINFO_NR_SHMEM = 26;
    VMEMINFO_NR_DIRTIED = 27;
    VMEMINFO_NR_WRITTEN = 28;
    VMEMINFO_NR_PAGES_SCANNED = 29;
    VMEMINFO_WORKINGSET_REFAULT = 30;
    VMEMINFO_WORKINGSET_ACTIVATE = 31;
    VMEMINFO_WORKINGSET_NODERECLAIM = 32;
    VMEMINFO_NR_ANON_TRANSPARENT_HUGEPAGES = 33;
    VMEMINFO_NR_FREE_CMA = 34;
    VMEMINFO_NR_SWAPCACHE = 35;
    VMEMINFO_NR_DIRTY_THRESHOLD = 36;
    VMEMINFO_NR_DIRTY_BACKGROUND_THRESHOLD = 37;
    VMEMINFO_PGPGIN = 38;
    VMEMINFO_PGPGOUT = 39;
    VMEMINFO_PGPGOUTCLEAN = 40;
    VMEMINFO_PSWPIN = 41;
    VMEMINFO_PSWPOUT = 42;
    VMEMINFO_PGALLOC_DMA = 43;
    VMEMINFO_PGALLOC_NORMAL = 44;
    VMEMINFO_PGALLOC_MOVABLE = 45;
    VMEMINFO_PGFREE = 46;
    VMEMINFO_PGACTIVATE = 47;
    VMEMINFO_PGDEACTIVATE = 48;
    VMEMINFO_PGFAULT = 49;
    VMEMINFO_PGMAJFAULT = 50;
    VMEMINFO_PGREFILL_DMA = 51;
    VMEMINFO_PGREFILL_NORMAL = 52;
    VMEMINFO_PGREFILL_MOVABLE = 53;
    VMEMINFO_PGSTEAL_KSWAPD_DMA = 54;
    VMEMINFO_PGSTEAL_KSWAPD_NORMAL = 55;
    VMEMINFO_PGSTEAL_KSWAPD_MOVABLE = 56;
    VMEMINFO_PGSTEAL_DIRECT_DMA = 57;
    VMEMINFO_PGSTEAL_DIRECT_NORMAL = 58;
    VMEMINFO_PGSTEAL_DIRECT_MOVABLE = 59;
    VMEMINFO_PGSCAN_KSWAPD_DMA = 60;
    VMEMINFO_PGSCAN_KSWAPD_NORMAL = 61;
    VMEMINFO_PGSCAN_KSWAPD_MOVABLE = 62;
    VMEMINFO_PGSCAN_DIRECT_DMA = 63;
    VMEMINFO_PGSCAN_DIRECT_NORMAL = 64;
    VMEMINFO_PGSCAN_DIRECT_MOVABLE = 65;
    VMEMINFO_PGSCAN_DIRECT_THROTTLE = 66;
    VMEMINFO_PGINODESTEAL = 67;
    VMEMINFO_SLABS_SCANNED = 68;
    VMEMINFO_KSWAPD_INODESTEAL = 69;
    VMEMINFO_KSWAPD_LOW_WMARK_HIT_QUICKLY = 70;
    VMEMINFO_KSWAPD_HIGH_WMARK_HIT_QUICKLY = 71;
    VMEMINFO_PAGEOUTRUN = 72;
    VMEMINFO_ALLOCSTALL = 73;
    VMEMINFO_PGROTATED = 74;
    VMEMINFO_DROP_PAGECACHE = 75;
    VMEMINFO_DROP_SLAB = 76;
    VMEMINFO_PGMIGRATE_SUCCESS = 77;
    VMEMINFO_PGMIGRATE_FAIL = 78;
    VMEMINFO_COMPACT_MIGRATE_SCANNED = 79;
    VMEMINFO_COMPACT_FREE_SCANNED = 80;
    VMEMINFO_COMPACT_ISOLATED = 81;
    VMEMINFO_COMPACT_STALL = 82;
    VMEMINFO_COMPACT_FAIL = 83;
    VMEMINFO_COMPACT_SUCCESS = 84;
    VMEMINFO_COMPACT_DAEMON_WAKE = 85;
    VMEMINFO_UNEVICTABLE_PGS_CULLED = 86;
    VMEMINFO_UNEVICTABLE_PGS_SCANNED = 87;
    VMEMINFO_UNEVICTABLE_PGS_RESCUED = 88;
    VMEMINFO_UNEVICTABLE_PGS_MLOCKED = 89;
    VMEMINFO_UNEVICTABLE_PGS_MUNLOCKED = 90;
    VMEMINFO_UNEVICTABLE_PGS_CLEARED = 91;
    VMEMINFO_UNEVICTABLE_PGS_STRANDED = 92;
    VMEMINFO_NR_ZSPAGES = 93;
    VMEMINFO_NR_ION_HEAP = 94;
    VMEMINFO_NR_GPU_HEAP = 95;
    VMEMINFO_ALLOCSTALL_DMA = 96;
    VMEMINFO_ALLOCSTALL_MOVABLE = 97;
    VMEMINFO_ALLOCSTALL_NORMAL = 98;
    VMEMINFO_COMPACT_DAEMON_FREE_SCANNED = 99;
    VMEMINFO_COMPACT_DAEMON_MIGRATE_SCANNED = 100;
    VMEMINFO_NR_FASTRPC = 101;
    VMEMINFO_NR_INDIRECTLY_RECLAIMABLE = 102;
    VMEMINFO_NR_ION_HEAP_POOL = 103;
    VMEMINFO_NR_KERNEL_MISC_RECLAIMABLE = 104;
    VMEMINFO_NR_SHADOW_CALL_STACK_BYTES = 105;
    VMEMINFO_NR_SHMEM_HUGEPAGES = 106;
    VMEMINFO_NR_SHMEM_PMDMAPPED = 107;
    VMEMINFO_NR_UNRECLAIMABLE_PAGES = 108;
    VMEMINFO_NR_ZONE_ACTIVE_ANON = 109;
    VMEMINFO_NR_ZONE_ACTIVE_FILE = 110;
    VMEMINFO_NR_ZONE_INACTIVE_ANON = 111;
    VMEMINFO_NR_ZONE_INACTIVE_FILE = 112;
    VMEMINFO_NR_ZONE_UNEVICTABLE = 113;
    VMEMINFO_NR_ZONE_WRITE_PENDING = 114;
    VMEMINFO_OOM_KILL = 115;
    VMEMINFO_PGLAZYFREE = 116;
    VMEMINFO_PGLAZYFREED = 117;
    VMEMINFO_PGREFILL = 118;
    VMEMINFO_PGSCAN_DIRECT = 119;
    VMEMINFO_PGSCAN_KSWAPD = 120;
    VMEMINFO_PGSKIP_DMA = 121;
    VMEMINFO_PGSKIP_MOVABLE = 122;
    VMEMINFO_PGSKIP_NORMAL = 123;
    VMEMINFO_PGSTEAL_DIRECT = 124;
    VMEMINFO_PGSTEAL_KSWAPD = 125;
    VMEMINFO_SWAP_RA = 126;
    VMEMINFO_SWAP_RA_HIT = 127;
    VMEMINFO_WORKINGSET_RESTORE = 128;
}
